# newlib

newlib/: configure.host
newlib/libc/include/sys/: _pthreadtypes.h  features.h
newlib/libc/stdlib/: mallocr.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/arm/: Makefile.am  Makefile.in  configure  configure.in  crt0.c  syscalls.c
newlib/libc/sys/arm/uefithreads/: Makefile.am  Makefile.in  configure  configure.in  pthreads.c
newlib/libc/sys/uefi/: Makefile.am  Makefile.in  configure  configure.in  crt0.c  list.h  syscalls.c
newlib/libc/sys/uefi/uefithreads/: Makefile.in  aclocal.m4  configure  configure.in  pthreads.c
